--- a/style.css
+++ b/style.css
@@ -1,3 +1,129 @@
+/* body {
+  font-family: "Helvetica", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+#navbar {
+  background-color: #fe3144;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+#nav-list {
+  display: flex;
+  flex-direction: row;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.5em;
+  padding: 1rem 2rem;
+}
+
+a:hover {
+  background-color: #15567d;
+}
+
+#welcome-section {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #000;
+  background-image: linear-gradient(62deg, #3a3d40 0%; #181719 0%);
+}
+
+h1 {
+  color: white;
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+#welcome-section>p {
+  color: #be3144;
+  font-size: 2rem;
+  font-style: italic;
+  font-weight: 100;
+}
+
+.projects {
+  margin: 0;
+  padding: 8rem 2rem;
+  text-align: center;
+  background-color: #45567d;
+}
+
+h2 {
+  font-size: 3.2rem;
+  color: white;
+}
+
+@media (max-width)h2 {
+  font-size: 2.5rem;
+}
+
+.project-img {
+  height: calc(100% - 4.8rem);
+  width: 100%;
+  object-fit: cover;
+}
+
+.project-tile {
+  color: white;
+  width: 100%;
+  background-color: #303441;
+  margin: 0;
+  padding: 2rem 0;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax (320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  margin-bottom: 6rem;
+}
+
+
+
+contact {
+  background-color: #303841;
+  width: 100%;
+  height: 80vh;
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#contact-p {
+  color: white;
+  font-style: italic;
+  font-weight: 100;
+  text-align: center;
+  font-size: 1.7rem;
+} */
+
+
+
+
+
+
 /* Design tokens */
 :root {
   --paper: hsla(251, 28%, 88%, 0.99);
@@ -6,9 +132,9 @@
   --font: "Raleway", system-ui, sans-serif;
   --gap: 20px;
   --container: clamp(280px, calc(100vw - calc(var(--gap) * 2)), 1180px);
-}
+} 
 /* General Styles */
-html,
+ html,
 body {
   scroll-behavior: smooth;
   background: var(--paper);
@@ -33,9 +159,9 @@ a:hover,
 a:focus {
   color: var(--brand);
   border-color: currentColor;
-}
+} 
 /* Site header and navigation */
-body > header {
+ body > header {
   background: var(--paper);
   display: flex;
   justify-content: space-between;
@@ -54,4 +180,4 @@ nav ul {
 section p {
   line-height: 1.5;
   max-width: 55ch;
-}
+} 
