--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Design tokens */
 :root {
-  --paper: hsla(251, 28%, 88%, 0.99);
+  --paper: hsla(120, 81%, 88%, 0.99);
   --ink: hsla(244, 16%, 17%, 0.95);
-  --brand: hsla(0, 79%, 63%, 0.9);
+  --brand: #3f4f3f;
   --font: "Raleway", system-ui, sans-serif;
   --gap: 20px;
   --container: clamp(280px, calc(100vw - calc(var(--gap) * 2)), 1180px);
@@ -22,6 +22,33 @@ body {
   gap: var(--gap);
   max-width: var(--container);
 }
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  
+}
+
+section {
+  margin: 10px;
+}
+
+#container {
+  display: flex;
+  justify-content: space-between;
+}
+
+#project2, #project3 {
+  display: none;
+}
+
+.project {
+  max-width: 350px;
+  margin: 10px;
+
+}
+
 a,
 a:any-link {
   color: currentColor;
@@ -54,4 +81,7 @@ nav ul {
 section p {
   line-height: 1.5;
   max-width: 55ch;
+  text-align: justify;
+  text-indent: 50px;
+  margin: 0;
 }
