--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Helvetica", sans-serif;
   margin: 0;
-  padding: 0;
+  padding-left: 25px;
 }
 
 #navbar {
@@ -159,6 +159,7 @@ body > header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   /* position: sticky; */
   top: 0;
   z-index: 1;
