--- a/style.css
+++ b/style.css
@@ -926,7 +926,7 @@ footer {
   .des-project {
     margin-left: 1rem;
     font-size: 20px;
-    border-radius: 5rem;
+    /* border-radius: 5rem; */
     width: 6rem;
     background-color: var(--White);
   }
