--- a/style.css
+++ b/style.css
@@ -15,15 +15,24 @@ body {
   color: var(--ink);
   font-family: var(--font);
 }
+
 body {
-  display: grid;
+  /* display: grid; */
+  display: flex;
+  flex-direction: column;
   margin: auto;
   min-height: 100vh;
   gap: var(--gap);
   max-width: var(--container);
 }
+.main-header {
+  font-size: larger;
+  height: 180px;
+  background-image: url(/images/photo-resized.jpg);
+  background-position: center;
+}
 
-main {
+.homepage {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
@@ -38,11 +47,38 @@ section {
   display: flex;
   justify-content: space-between;
 }
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-page {
+  flex: 1;
+}
 
-#project2, #project3 {
+textarea {
+  width: 60%;
+  min-height: 250px;
+  font-size: 14px;
+  font-family: var(--font);
+  padding: 10px;
+}
+
+#submitBtn {
+  border: black;
+  background-color: var(--brand);
+  color: whitesmoke;
+  border-radius: 5px;
+  margin-top: 20px;
+  font-size: 24px;
+  padding: 10px 15px 10px 15px;
+}
+
+/* #project2, #project3 {
   display: none;
   
-}
+} */
 
 #id {
   visibility: collapse;
@@ -60,30 +96,36 @@ button {
   border: none;
 }
 
-a,
-a:any-link {
-  color: blue;
+a {
+  color: darkblue;
   border-bottom: 2px solid transparent;
   transition: border-color ease-in-out 0.3s;
+  font-weight: 500;
+  font-style: oblique;
 }
 a:hover,
 a:focus {
-  color: var(--brand);
+  color: black;
 }
 /* Site header and navigation */
 body > header {
-  background: var(--paper);
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   position: sticky;
   top: 0;
   z-index: 1;
+  padding: 10px;
 }
+
 nav ul {
   display: flex;
   list-style: none;
   gap: var(--gap);
+}
+
+.header-link {
+  color: whitesmoke;
 }
 
 /* Text readability */
@@ -93,4 +135,15 @@ section p {
   text-align: justify;
   text-indent: 50px;
   margin: 0;
+}
+
+footer {
+  display: flex;
+  align-self: end;
+  justify-self: end;
+  width: var(--container);
+  justify-content: center;
+  margin-top: 2em;
+  border-top: 5px solid var(--brand);
+  bottom: 0;
 }
